--- a/VoxelGame/VoxelGame.vcxproj.filters
+++ b/VoxelGame/VoxelGame.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\log">
+      <UniqueIdentifier>{735fc428-18b0-40b2-8104-bd512e555807}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\VoxelGame\Main.cpp">
@@ -21,10 +24,16 @@
     <ClCompile Include="src\VoxelGame\pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\VoxelGame\log\ConsoleLogger.cpp">
+      <Filter>Source Files\log</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\VoxelGame\pch.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\VoxelGame\log\ConsoleLogger.h">
+      <Filter>Source Files\log</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
