--- a/VoxelGame/VoxelGame.vcxproj.filters
+++ b/VoxelGame/VoxelGame.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="src\glad\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\logging\ConsoleLogger.h">
@@ -56,5 +59,12 @@
     <ClInclude Include="src\Window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\shaders\triangle.vert.glsl" />
+    <None Include="res\shaders\triangle.frag.glsl" />
   </ItemGroup>
 </Project>
