--- a/VoxelGame/VoxelGame.vcxproj
+++ b/VoxelGame/VoxelGame.vcxproj
@@ -95,6 +95,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\ChunkManager.cpp" />
     <ClCompile Include="src\Block.cpp" />
     <ClCompile Include="src\Chunk.cpp" />
     <ClCompile Include="src\Camera.cpp" />
@@ -162,6 +163,7 @@
     <ClCompile Include="src\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\ChunkManager.h" />
     <ClInclude Include="src\Block.h" />
     <ClInclude Include="src\Chunk.h" />
     <ClInclude Include="src\Camera.h" />
